--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "parcel watch src/index.html"
+    "start:dev": "parcel watch src/index.html",
+    "serve": "parcel serve src/index.html --port 8080"
   },
   "keywords": [],
   "author": "",
