--- a/package.json
+++ b/package.json
@@ -1,23 +1,15 @@
 {
   "name": "tic-tac",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "parcel watch src/index.html",
-    "serve": "parcel serve src/index.html --port 8080"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "cssnano": "^4.1.10",
-    "parcel": "^1.12.4",
-    "sass": "^1.27.0",
-    "typescript": "^4.0.3"
-  },
   "dependencies": {
-    "regenerator-runtime": "^0.13.7"
+    "immer": "^9.0.6",
+    "solid-js": "^1.1.6"
+  },
+  "devDependencies": {
+    "tailwindcss": "^2.2.16",
+    "typescript": "^4.4.3",
+    "vite": "^2.6.5",
+    "vite-plugin-solid": "^2.1.0",
+    "vite-plugin-windicss": "^1.4.10"
   }
 }
